Apply radix colors to our theme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-next-monorepo-example",
+  "name": "hummingbird",
   "private": true,
   "license": "MIT",
   "devDependencies": {
