--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.1.3",
+    "@radix-ui/colors": "^0.1.7",
     "app": "*",
     "dripsy": "^3.0.0",
     "expo": "^43.0.0",
